os/bluestore: do not select absent device in volume selector

Fixes: ttps://tracker.ceph.com/issues/53139
Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit 39132b0e460d2d667f02019335dced50d5db641d)